# edex

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  defense_speaker_notes_中文.md  package-lock.json  package.json  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json
alembic/: env.py
api/: index.py
cgg_v1/: aa.mod.sp  cankao12_00main_panel_schematic.netlist  cankao12_00main_panel_schematic_Nominal.sp  goa.mod.sp
config/: circuit_profiles.yaml  eval_profiles.yaml  evaluation_spec_low_voltage.yaml  parameter_semantics.yaml  pia_ca_llso_default.yaml  pia_ca_llso_goa_profile.yaml  pia_ca_llso_transfer_v4.yaml  pia_ca_llso_transistor_profile.yaml  pia_ca_llso_validation_protocol.yaml  sky130_candidate_sweep.yaml  sky130_eval_profiles.yaml  sky130_sweep.yaml  sky130_transient_spec.yaml  sky130_validation.yaml
configs/: cascade_720.yaml  default.yaml  default_eval.yaml  metrics.yaml  thresholds.yaml
constraints/: py310.txt
docs/: PROJECT_TECHNICAL_REPORT_FOR_GPT.md  algorithm_benchmark.md  closed_loop_optimizer.md  dashboard_api.md  demo_quickstart.md  eclipse_benchmark.md  empyrean_offline_adapter.md  github_upload_checklist.md  goa_hybrid_optimizer.md  goa_strategy_benchmark.md  handoff_guide.md  instrumentation_amplifier_agent_template_zh.md  instrumentation_amplifier_simulation_sampling_guide_zh.md  metrics_spec.md  multi_agent_evidence_chain.md  paper_digitization_database.md  physics_guided_optimizer.md  pia_ca_llso.md  pia_ca_llso_api.md  pia_ca_llso_benchmark.md  pia_ca_llso_closed_loop.md  pia_ca_llso_core_innovations_zh.md  pia_ca_llso_evidence_case_pack.md  pia_ca_llso_experimental_validation.md  pia_ca_llso_formal_method_zh.md  pia_ca_llso_integration.md  pia_ca_llso_real_case_pack.md  pia_ca_llso_simulator_adapter.md  pia_capm_distance_research_zh.md  pia_capm_distance_v2_zh.md  pia_capm_distance_v3_zh.md  pia_cross_circuit_transfer_v4_zh.md  product_architecture.md  product_migration.md  product_quickstart.md  profile_closed_loop_example.md  project_code_hardening_migration.md  project_improvements_after_2026_06_07_mentor_report.md  project_improvements_after_2026_06_07_ppt_outline.md  project_overview.md  (+9 more)
examples/: profile_closed_loop_params.yaml  sample_params.yaml  sample_waveform.csv  sky130_candidate_chain_row.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: build_pia_paper_figures.py  build_product_demo.py  build_public_demo.py  codegraph.ps1  compare_versions.py  generate_manual_review.py  (+7 more)
(+643 files in other folders)
